@@ -9,10 +9,10 @@ import lombok.Setter;
 import lombok.experimental.Accessors;
 import org.springframework.boot.context.properties.NestedConfigurationProperty;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -27,6 +27,7 @@ import java.util.stream.Stream;
 @Accessors(chain = true)
 @JsonFilter("HazelcastClusterProperties")
 public class HazelcastNetworkClusterProperties implements Serializable {
+    @Serial
     private static final long serialVersionUID = -8474968308106013185L;
 
     /**
@@ -45,7 +46,7 @@ public class HazelcastNetworkClusterProperties implements Serializable {
      * indicates multiple members are going to be added.
      */
     @RequiredProperty
-    private List<String> members = Stream.of("localhost").collect(Collectors.toList());
+    private List<String> members = Stream.of("localhost").toList();
 
     /**
      * You may also want to choose to use only one port. In that case,
