@@ -4,13 +4,10 @@ import org.apereo.cas.audit.AuditPrincipalIdProvider;
 import org.apereo.cas.authentication.Authentication;
 import org.apereo.cas.util.spring.beans.BeanSupplier;
 
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.aspectj.lang.JoinPoint;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link ChainingAuditPrincipalIdProvider}.
@@ -18,11 +15,7 @@ import java.util.stream.Collectors;
  * @author Misagh Moayyed
  * @since 5.3.0
  */
-@Getter
-@RequiredArgsConstructor
-public class ChainingAuditPrincipalIdProvider implements AuditPrincipalIdProvider {
-    private final List<AuditPrincipalIdProvider> providers;
-
+public record ChainingAuditPrincipalIdProvider(List<AuditPrincipalIdProvider> providers) implements AuditPrincipalIdProvider {
     /**
      * Add provider.
      *
@@ -40,7 +33,7 @@ public class ChainingAuditPrincipalIdProvider implements AuditPrincipalIdProvide
      * @param provider the provider
      */
     public void addProviders(final List<AuditPrincipalIdProvider> provider) {
-        providers.addAll(provider.stream().filter(BeanSupplier::isNotProxy).collect(Collectors.toList()));
+        providers.addAll(provider.stream().filter(BeanSupplier::isNotProxy).toList());
     }
 
     @Override
