@@ -5,8 +5,6 @@ import org.apereo.cas.mongo.CasMongoOperations;
 import lombok.val;
 import org.bson.Document;
 
-import java.util.stream.Collectors;
-
 /**
  * This is {@link MongoDbHealthIndicator} where it attempts to collect statistics
  * on all mongodb instances configured inside CAS.
@@ -31,8 +29,7 @@ public class MongoDbHealthIndicator extends AbstractCacheHealthIndicator {
             .map(c -> {
                 val stats = mongoTemplate.executeCommand(new Document("collStats", c));
                 return new MongoDbCacheStatistics(stats, c);
-            })
-            .collect(Collectors.toList());
+            }).toList();
 
         return list.toArray(CacheStatistics[]::new);
     }
