@@ -65,19 +65,17 @@ public class AddPropertiesToConfigurationCommand {
         LOGGER.info("Located [{}] properties matching [{}]", results.size(), group);
 
         switch (FilenameUtils.getExtension(filePath.getName()).toLowerCase()) {
-            case "properties":
+            case "properties" -> {
                 createConfigurationFileIfNeeded(filePath);
                 val props = loadPropertiesFromConfigurationFile(filePath);
                 writeConfigurationPropertiesToFile(filePath, results, props);
-                break;
-            case "yaml":
-            case "yml":
+            }
+            case "yaml", "yml" -> {
                 createConfigurationFileIfNeeded(filePath);
                 val yamlProps = CasCoreConfigurationUtils.loadYamlProperties(new FileSystemResource(filePath));
                 writeYamlConfigurationPropertiesToFile(filePath, results, yamlProps);
-                break;
-            default:
-                LOGGER.warn("Configuration file format [{}] is not recognized", filePath.getCanonicalPath());
+            }
+            default -> LOGGER.warn("Configuration file format [{}] is not recognized", filePath.getCanonicalPath());
         }
 
     }
@@ -109,8 +107,7 @@ public class AddPropertiesToConfigurationCommand {
 
     private static void putResultsIntoProperties(final Map<String, ConfigurationMetadataProperty> results, final Map<String, Object> p) {
         val lines = results.values().stream()
-            .sorted(Comparator.comparing(ConfigurationMetadataProperty::getName))
-            .collect(Collectors.toList());
+            .sorted(Comparator.comparing(ConfigurationMetadataProperty::getName)).toList();
         lines.forEach(v -> {
             val value = getDefaultValueForProperty(v);
             LOGGER.info("Adding property [{}]=[{}]", v.getId(), value);
